Adds last message to chat meta
